--- a/markdown/bqsr.Rmd
+++ b/markdown/bqsr.Rmd
@@ -15,6 +15,17 @@ library(tidyverse)
 library(cowplot)
 ```
 
+## SNP calling with the entire Greenland dataset and relaxed filters
+
+```{bash eval=FALSE}
+nohup /workdir/programs/angsd0.931/angsd/angsd \
+-b /workdir/cod/greenland-cod/sample_lists/bam_list_realigned_mincov_filtered.txt \
+-anc /workdir/cod/reference_seqs/gadMor3.fasta \
+-out /workdir/batch-effect/angsd/global_snp_list_bqsr \
+-GL 1 -doMaf 1 -doMajorMinor 1 -P 8 -SNP_pval 1e-6 -minQ 20 -minMapQ 20 \
+> /workdir/batch-effect/nohups/global_snp_list_bqsr.nohup &
+```
+
 ## SoapSNP GL model in ANGSD
 
 #### Create a bed formatted SNP list
@@ -29,16 +40,20 @@ bed_snp_list <- read_tsv("../../cod/greenland-cod/angsd/global_snp_list_bam_list
   dplyr::select(1:2) %>%
   mutate(X2=X2-1, X3=X2+1)
 write_tsv(bed_snp_list, "../angsd/global_snp_list_bam_list_realigned_mincov_filtered_mindp249_maxdp1142_minind111_minq20.bed", col_names = FALSE)
+
+bed_snp_list <- read_tsv("../angsd/global_snp_list_bqsr.mafs.gz") %>%
+  transmute(chromo=chromo, position_start=position-1, position_end=position)
+write_tsv(bed_snp_list, "../angsd/global_snp_list_bqsr.bed", col_names = FALSE)
 ```
 
 #### Mask SNPs in reference genome
 
 ```{bash eval=FALSE}
-bedtools maskfasta \
+nohup bedtools maskfasta \
 -fi /workdir/cod/reference_seqs/gadMor3.fasta \
--bed /workdir/batch-effect/angsd/global_snp_list_bam_list_realigned_mincov_filtered_mindp249_maxdp1142_minind111_minq20.bed \
+-bed /workdir/batch-effect/angsd/global_snp_list_bqsr.bed \
 -fo /workdir/batch-effect/misc/gadMor3_snp_masked.fasta \
-> /workdir/batch-effect/nohups/maskfasta.nohup
+> /workdir/batch-effect/nohups/maskfasta.nohup &
 samtools faidx /workdir/batch-effect/misc/gadMor3_snp_masked.fasta 
 ```
 
@@ -134,7 +149,7 @@ SAMPLESIZE=$2
 
 OUTDIR=/workdir/batch-effect/angsd/heterozygosity/
 JOB_INDEX=0
-JOBS=20
+JOBS=10
 MINDP=2
 MAXDP=10
 MINQ=0
@@ -251,19 +266,19 @@ het_final %>%
 
 ```{bash evl=FALSE}
 echo -e "##fileformat=VCFv4.2
-#CHROM\tPOS\tID\tREF\tALT\tQUAL\tFILTER\tINFO" > /workdir/batch-effect/angsd/global_snp_list_bam_list_realigned_mincov_filtered_mindp249_maxdp1142_minind111_minq20.vcf
+#CHROM\tPOS\tID\tREF\tALT\tQUAL\tFILTER\tINFO" > /workdir/batch-effect/angsd/global_snp_list_bqsr.vcf
 ```
 
 ```{r eval=FALSE}
-vcf_snp_list <- read_tsv("../../cod/greenland-cod/angsd/global_snp_list_bam_list_realigned_mincov_filtered_mindp249_maxdp1142_minind111_minq20.txt", col_names = FALSE) %>%
-  mutate(X5=".", X6=".", X7="PASS", X8=".") %>%
+vcf_snp_list <- read_tsv("../angsd/global_snp_list_bqsr.mafs.gz", col_names = TRUE) %>%
+  transmute(X1=chromo, X2=position, X3=major, X4=minor, X5=".", X6=".", X7="PASS", X8=".") %>%
   relocate(X1, X2, X5)
-write_tsv(vcf_snp_list, "../angsd/global_snp_list_bam_list_realigned_mincov_filtered_mindp249_maxdp1142_minind111_minq20.vcf", col_names = FALSE, append = TRUE)
+write_tsv(vcf_snp_list, "../angsd/global_snp_list_bqsr.vcf", col_names = FALSE, append = TRUE)
 ```
 
 ```{bash evl=FALSE}
 /programs/gatk-4.2.0.0/gatk IndexFeatureFile \
--I /workdir/batch-effect/angsd/global_snp_list_bam_list_realigned_mincov_filtered_mindp249_maxdp1142_minind111_minq20.vcf
+-I /workdir/batch-effect/angsd/global_snp_list_bqsr.vcf
 ```
 
 #### Test one sample
@@ -284,6 +299,7 @@ nohup /programs/gatk-4.2.0.0/gatk ApplyBQSR \
 > /workdir/batch-effect/nohups/gatk_ApplyBQSR_test.nohup &
 ```
 
+
 #### Run all samples
 
 Save the following script as `/workdir/batch-effect/scripts/gatk_bqsr.sh`
@@ -293,7 +309,7 @@ Save the following script as `/workdir/batch-effect/scripts/gatk_bqsr.sh`
 BAMLIST=/workdir/batch-effect/sample_lists/bam_list_realigned.txt
 BASEDIR=/workdir/batch-effect/
 REFERENCE=/workdir/cod/reference_seqs/gadMor3.fasta
-VCF=/workdir/batch-effect/angsd/global_snp_list_bam_list_realigned_mincov_filtered_mindp249_maxdp1142_minind111_minq20.vcf
+VCF=/workdir/batch-effect/angsd/global_snp_list_bqsr.vcf
 
 JOB_INDEX=0
 JOBS=20
@@ -350,7 +366,7 @@ Save the following script as `/workdir/batch-effect/scripts/get_heterozygosity_b
 BAMLIST=/workdir/batch-effect/sample_lists/bam_list_realigned.txt
 OUTDIR=/workdir/batch-effect/angsd/heterozygosity/
 JOB_INDEX=0
-JOBS=40
+JOBS=10
 MINDP=2
 MAXDP=10
 MINQ=0
@@ -460,7 +476,7 @@ het_final %>%
 
 Neither the ANGSD nor the GATK method for BQSR has worked well, and this is likely due to ascertainment bias, since the samples sequenced at lower coverage are less likely to have its private SNPs called in the global SNP calling step. Therefore, these SNPs are treated as sequencing errors, and the base quality scores of these samples are more likely to be miscalibrated, resulting in lower heterozygosity estimates. Therefore, we could consider pooling all samples from the same lane together for BQSR as a next step.
 
-But even then, it seems that the base quality scores for all samples are downward biased after BQSR, because we do not have an exhaustive database of variants in the data. This may also be due to the fact that we have a depth filter in our SNP calling step. We should consider filtering out these sites that didn't pass the depth filter from BQSR (I will do this next). 
+But even then, it seems that the base quality scores for all samples are downward biased after BQSR, because we do not have an exhaustive database of variants in the data. I have now tried this with SNP lists called with the batch-effect samples (`global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20.txt`, minMaf=0.05), Greenlands samples with depth filters (`global_snp_list_bam_list_realigned_mincov_filtered_mindp249_maxdp1142_minind111_minq20.txt`, minMaf=0.01), and Greenland samples with only a SNP p-value filter (`global_snp_list_bqsr.mafs.gz`). In terms of variant database, this is perhaps the best that we can do.
 
 Some methods that do not depend on such a database, such as KBBQ and Lacer, are not built for low-coverage data. Therefore, BQSR based on synthetic sequences (e.g. PhiX) might be the way to go in the future. 
 
