use minmapq=30 in ANGSD BQSR, and use minmapq=20 in GATK BQSR while generating a single recal table for all samples

--- a/markdown/bqsr.Rmd
+++ b/markdown/bqsr.Rmd
@@ -67,6 +67,7 @@ nohup /workdir/programs/angsd0.931/angsd/angsd \
 -out /workdir/batch-effect/angsd/soapsnp_se \
 -ref  /workdir/batch-effect/misc/gadMor3_snp_masked.fasta \
 -minQ 0 \
+-minMapQ 30 \
 > /workdir/batch-effect/nohups/calibration_matrix_se.nohup &
 
 nohup /workdir/programs/angsd0.931/angsd/angsd \
@@ -76,6 +77,7 @@ nohup /workdir/programs/angsd0.931/angsd/angsd \
 -out /workdir/batch-effect/angsd/soapsnp_pe \
 -ref  /workdir/batch-effect/misc/gadMor3_snp_masked.fasta \
 -minQ 0 \
+-minMapQ 30 \
 > /workdir/batch-effect/nohups/calibration_matrix_pe.nohup &
 
 for K in {0..87}; do
@@ -94,52 +96,6 @@ done
 
 #### Estimate heterozygosity
 
-```{bash eval=FALSE}
-nohup /workdir/programs/angsd0.931/angsd/angsd \
--i /workdir/batch-effect/bam/ATP2011_111_55173_7_pe_bt2_gadMor3_sorted_dedup_overlapclipped_realigned.bam \
--anc /workdir/cod/reference_seqs/gadMor3.fasta \
--out /workdir/batch-effect/angsd/test \
--doSaf 1 \
--GL 3 \
--tmpdir /workdir/batch-effect/angsd_tmpdir_pe/ \
--P 8 \
--doCounts 1 \
--setMinDepth 2 \
--setMaxDepth 10 \
--minQ 20 \
--minmapq 30 \
-> /workdir/batch-effect/nohups/gl3_test.nohup &
-
-/workdir/programs/angsd0.931/angsd/misc/realSFS \
-/workdir/batch-effect/angsd/test.saf.idx \
--P 8 \
-> /workdir/batch-effect/angsd/test.ml
-
-## The estimated He is 0.00027246644, which is MUCH lower than the ones estimated prior to recalibration (0.00322799145 for minQ20 and 0.00307783489 for minQ33)
-
-nohup /workdir/programs/angsd0.931/angsd/angsd \
--i /workdir/batch-effect/bam/ATP2011_111_55173_7_pe_bt2_gadMor3_sorted_dedup_overlapclipped_realigned.bam \
--anc /workdir/cod/reference_seqs/gadMor3.fasta \
--out /workdir/batch-effect/angsd/test2 \
--doSaf 1 \
--GL 3 \
--tmpdir /workdir/batch-effect/angsd_tmpdir_pe/ \
--P 8 \
--doCounts 1 \
--setMinDepth 2 \
--setMaxDepth 10 \
--minQ 25 \
--minmapq 30 \
-> /workdir/batch-effect/nohups/gl3_test2.nohup &
-
-/workdir/programs/angsd0.931/angsd/misc/realSFS \
-/workdir/batch-effect/angsd/test2.saf.idx \
--P 8 \
-> /workdir/batch-effect/angsd/test2.ml
-
-## The estimated He becomes 0 when minQ is 33 or 30
-```
-
 Save the following script as `/workdir/batch-effect/scripts/get_heterozygosity_bqsr.sh`
 
 ```{bash eval=FALSE}
@@ -153,7 +109,7 @@ JOBS=10
 MINDP=2
 MAXDP=10
 MINQ=0
-MINMAPQ=20
+MINMAPQ=30
 KMAX=$(( SAMPLESIZE-1  ))
 for K in $(seq 0 $KMAX); do
   LINE=`head /workdir/batch-effect/sample_lists/bam_list_per_pop/bam_list_realigned_${BATCH}.txt -n $(( K+1 )) | tail -n 1`
@@ -216,11 +172,11 @@ for (i in 1:nrow(sample_table)){
   if (str_detect(data_type,"pe")){
     path <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_overlapclipped_realigned_mindp2_maxdp10_minq20_minmapq30")
     path_stringent <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_overlapclipped_realigned_mindp2_maxdp10_minq33_minmapq30")
-    path_bqsr <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_overlapclipped_realigned_mindp2_maxdp10_minq0_minmapq20_bqsr")
+    path_bqsr <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_overlapclipped_realigned_mindp2_maxdp10_minq0_minmapq30_bqsr")
   } else {
     path <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_realigned_mindp2_maxdp10_minq20_minmapq30")
     path_stringent <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_realigned_mindp2_maxdp10_minq33_minmapq30")
-    path_bqsr <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_realigned_mindp2_maxdp10_minq0_minmapq20_bqsr")
+    path_bqsr <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_realigned_mindp2_maxdp10_minq0_minmapq30_bqsr")
   }
   het_relaxed <- read_delim(str_c(path, ".ml"), col_names = F, delim = " ") %>% 
     transmute(n_sites=(X1+X2+X3), n_snp=X2, het=n_snp/n_sites) %>%
@@ -281,26 +237,25 @@ write_tsv(vcf_snp_list, "../angsd/global_snp_list_bqsr.vcf", col_names = FALSE, 
 -I /workdir/batch-effect/angsd/global_snp_list_bqsr.vcf
 ```
 
-#### Test one sample
-
-```{bash eval=FALSE}
-nohup /programs/gatk-4.2.0.0/gatk BaseRecalibrator \
--I /workdir/batch-effect/bam/ATP2011_111_55173_7_pe_bt2_gadMor3_sorted_dedup_overlapclipped_realigned.bam \
--R /workdir/cod/reference_seqs/gadMor3.fasta \
---known-sites /workdir/batch-effect/angsd/global_snp_list_bam_list_realigned_mincov_filtered_mindp249_maxdp1142_minind111_minq20.vcf \
--O /workdir/batch-effect/bam/recal_data_test.table \
-> /workdir/batch-effect/nohups/gatk_bqsr_test.nohup &
-  
-nohup /programs/gatk-4.2.0.0/gatk ApplyBQSR \
--R /workdir/cod/reference_seqs/gadMor3.fasta \
--I /workdir/batch-effect/bam/ATP2011_111_55173_7_pe_bt2_gadMor3_sorted_dedup_overlapclipped_realigned.bam \
---bqsr-recal-file /workdir/batch-effect/bam/recal_data_test.table \
--O /workdir/batch-effect/bam/gatk_bqsr_test.bam \
-> /workdir/batch-effect/nohups/gatk_ApplyBQSR_test.nohup &
-```
-
 
 #### Run all samples
+
+```{bash eval=FALSE}
+/programs/gatk-4.2.0.0/gatk IndexFeatureFile \
+-I /workdir/batch-effect/angsd/global_snp_list_bqsr.bed
+
+cp /workdir/batch-effect/sample_lists/bam_list_realigned.txt /workdir/batch-effect/sample_lists/bam_list_realigned.list
+
+nohup /programs/gatk-4.2.0.0/gatk \
+BaseRecalibrator \
+-I /workdir/batch-effect/sample_lists/bam_list_realigned.list \
+-R /workdir/cod/reference_seqs/gadMor3.fasta \
+--known-sites /workdir/batch-effect/angsd/global_snp_list_bqsr.bed \
+--read-filter MappingQualityReadFilter \
+--minimum-mapping-quality 20 \
+-O /workdir/batch-effect/bam/recal_data_all_samples.table \
+> /workdir/batch-effect/nohups/gatk_bqsr_all_samples.nohup &
+```
 
 Save the following script as `/workdir/batch-effect/scripts/gatk_bqsr.sh`
 
@@ -318,31 +273,10 @@ for LINE in `cat $BAMLIST`; do
   NAME_TEMP=`echo "${LINE%.*}"`
   NAME=`echo "${NAME_TEMP##*/}"`
 	echo $NAME
-
-  /programs/gatk-4.2.0.0/gatk BaseRecalibrator \
-  -I $LINE \
-  -R $REFERENCE \
-  --known-sites $VCF \
-  -O ${BASEDIR}/bam/${NAME}_recal_data.table &
-  
-  JOB_INDEX=$(( JOB_INDEX + 1 ))
-	if [ $JOB_INDEX == $JOBS ]; then
-		wait
-		JOB_INDEX=0
-	fi
-done
-
-wait
-
-JOB_INDEX=0
-for LINE in `cat $BAMLIST`; do
-  NAME_TEMP=`echo "${LINE%.*}"`
-  NAME=`echo "${NAME_TEMP##*/}"`
-	echo $NAME
   /programs/gatk-4.2.0.0/gatk ApplyBQSR \
   -R $REFERENCE \
   -I $LINE \
-  --bqsr-recal-file ${BASEDIR}/bam/${NAME}_recal_data.table \
+  --bqsr-recal-file ${BASEDIR}/bam/recal_data_all_samples.table \
   -O ${BASEDIR}/bam/${NAME}_bqsr.bam &
   
   JOB_INDEX=$(( JOB_INDEX + 1 ))
@@ -370,7 +304,7 @@ JOBS=10
 MINDP=2
 MAXDP=10
 MINQ=0
-MINMAPQ=20
+MINMAPQ=30
 for LINE in `cat $BAMLIST`; do
   NAME_TEMP=`echo "${LINE%.*}"`
   NAME=`echo "${NAME_TEMP##*/}"`
@@ -428,11 +362,11 @@ for (i in 1:nrow(sample_table)){
   if (str_detect(data_type,"pe")){
     path <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_overlapclipped_realigned_mindp2_maxdp10_minq20_minmapq30")
     path_stringent <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_overlapclipped_realigned_mindp2_maxdp10_minq33_minmapq30")
-    path_bqsr <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_overlapclipped_realigned_mindp2_maxdp10_minq0_minmapq20_bqsr_gatk")
+    path_bqsr <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_overlapclipped_realigned_mindp2_maxdp10_minq0_minmapq30_bqsr_gatk")
   } else {
     path <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_realigned_mindp2_maxdp10_minq20_minmapq30")
     path_stringent <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_realigned_mindp2_maxdp10_minq33_minmapq30")
-    path_bqsr <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_realigned_mindp2_maxdp10_minq0_minmapq20_bqsr_gatk")
+    path_bqsr <- str_c("../angsd/heterozygosity/", sample_seq_id,  "_bt2_gadMor3_sorted_dedup_realigned_mindp2_maxdp10_minq0_minmapq30_bqsr_gatk")
   }
   het_relaxed <- read_delim(str_c(path, ".ml"), col_names = F, delim = " ") %>% 
     transmute(n_sites=(X1+X2+X3), n_snp=X2, het=n_snp/n_sites) %>%
