--- a/markdown/figures.Rmd
+++ b/markdown/figures.Rmd
@@ -26,10 +26,10 @@ Here, I am comparing heterozygosity estimated from:
 
 Neither have transitions filtered, have a stringent maximum depth filter of 10, and a stringent mapping quality filter of 30.
 
-```{r fig.width=7.5, fig.height=6.6}
+```{r fig.width=15, fig.height=4}
 sample_table <- read_tsv("../sample_lists/sample_table_merged.tsv")
-rename_pop <- tibble(population = c("ITV2011", "KNG2011", "QQL2011"),
-                     population_new =c("pop 1", "pop 2", "pop 3"))
+rename_pop <- tibble(population = c("ITV2011", "KNG2011", "QQL2011", "BUK2011", "IKE2011", "PAA2011", "ATP2011", "NAR2008", "UUM2010"),
+                     population_new =c("pop 1", "pop 2", "pop 3", "pop 4", "pop 5", "pop 6", "pop 7", "pop 8", "pop 9"))
 for (i in 1:nrow(sample_table)){
   sample_seq_id <- sample_table$sample_seq_id[i]
   sample_id <- sample_table$sample_id_corrected[i]
@@ -61,25 +61,27 @@ het_gg <- het_final %>%
   mutate(batch=ifelse(data_type=="pe", "NextSeq-150PE", "HiSeq-125SE")) 
 set.seed(42)
 het_plot <- het_gg %>%
-  filter(population %in% c("KNG2011", "QQL2011", "ITV2011")) %>%
-  ggplot(aes(x=population, y=het)) +
+  filter(population_new %in% str_c("pop ", 1:6)) %>%
+  ggplot(aes(x="", y=het*10^3)) +
   geom_boxplot(outlier.alpha = 0, color="black", size=0.2, width=0.2) +
   #geom_jitter(data=(het_gg %>% dplyr::select(-population_new) %>% filter(! population %in% c("KNG2011", "QQL2011", "ITV2011"))) , color="grey", height = 0, width = 0.3, size=1) +
   geom_jitter(aes(color=batch), height = 0, width = 0.1, size=2) +
   scale_color_viridis_d(begin=0.25, end=0.75) +
-  ylab("heterozygosity") +
-  facet_grid(population_new~type, scales = "free_y") +
+  ylab(expression(paste("heterozygosity (in ", 10^-3, ")"))) +
+  facet_grid(type~population_new, scales = "free_y") +
   xlab(" ") +
-  #scale_y_continuous(limits = c(0, 0.005), breaks = 0.001*(0:5), labels = c("0", "0.001", "0.002", "0.003", "0.004", "0.005")) +
+  #scale_y_continuous(limits = c(0.002, 0.008), breaks = 0.002*(1:4)) +
   coord_flip() +
   theme_cowplot() +
   theme(panel.background=element_rect(colour="black", size=0.8),
-        legend.position = c(0.78, 0.94),
+        legend.position = c(0.9, 0.09),
         legend.key.size = unit(0.5, 'lines'),
-        strip.text.x = element_text(face = "bold", size=20),
+        strip.text.y = element_text(face = "bold", size=20),
+        strip.text.x = element_text(size=18),
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank(),
-        legend.key = element_rect(fill = "white", colour = "black"))
+        legend.key = element_rect(fill = "white", colour = "black"),
+        legend.title = element_blank())
 het_plot
 ```
 
@@ -110,29 +112,31 @@ pca_after <- pca_table[,1:4] %>%
   left_join(transmute(sample_table, individual=sample_id_corrected, population=population))
 ```
 
-```{r fig.width=7.5, fig.height=6.6}
+```{r fig.width=15, fig.height=3.8}
 pca_combined <- bind_rows(bind_cols(pca_before, type="Before"), 
                           bind_cols(pca_after, type="After")) %>%
   mutate(type=fct_relevel(type, c("Before", "After"))) %>%
   mutate(batch=ifelse(data_type=="se", "HiSeq-125SE", "NextSeq-150PE"))
-pca_combined_select_pops <- filter(pca_combined, population %in% c("KNG2011", "QQL2011", "ITV2011"))
-pca_plot <- pca_combined_select_pops %>%
+pca_plot <- pca_combined %>%
   left_join(rename_pop) %>%
+  filter(population_new %in% str_c("pop ", 1:6)) %>%
   ggplot(aes(x=PC1, y=PC2)) +
   geom_point(data=pca_combined, color="grey", size=0.5) +
   geom_point(aes(color=batch), size=2) +
   scale_color_viridis_d(begin=0.25, end=0.75) +
-  facet_grid(population_new~type) +
-  ylim(-0.1, NA) +
+  facet_grid(type~population_new) +
+  ylim(-0.12, NA) +
   xlim(-0.15, NA) +
   theme_cowplot() +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank(),
-        panel.border = element_rect(colour="black",size=0.5),
-        legend.position = c(0.78, 0.94),
+        panel.border = element_rect(colour="black",size=0.8),
+        legend.position = c(0.9, 0.09),
         legend.key.size = unit(0.5, 'lines'),
-        strip.text.x = element_text(face = "bold", size=20),
-        legend.key = element_rect(fill = "white", colour = "black"))
+        strip.text.y = element_text(face = "bold", size=20),
+        strip.text.x = element_text(size=18),
+        legend.key = element_rect(fill = "white", colour = "black"),
+        legend.title = element_blank())
 pca_plot
 ```
 
@@ -140,7 +144,7 @@ pca_plot
 
 Here, I am plotting Fst estimated from sliding window trimmed data with relaxed mapping quality and read quality filter (both 20). There is a minimum number of individuals filter of 20 for both batches of data. I compare the Fst result before and after applying a depth ratio filter of 0.9. 
 
-```{r fig.width=15, fig.height=3.3}
+```{r fig.width=15, fig.height=4}
 maf_se <- read_tsv("../angsd/popminind20/se_global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20_popminind20.mafs.gz") %>%
   transmute(lg = chromo, position = position, major=major, minor = minor, se_maf = knownEM, se_nind=nInd)
 maf_pe <- read_tsv("../angsd/popminind20/pe_global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20_popminind20.mafs.gz")%>%
@@ -171,18 +175,17 @@ fst_plot <- fst_combined %>%
   scale_x_continuous(breaks = c(0,15)) +
   facet_grid(type~lg, scales = "free_x", space = "free_x") +
   xlab("position (in Mb)") +
-  ylab("Fst") +
+  ylab(expression(F[ST]~between~batches)) +
   theme_cowplot() +
   theme(panel.spacing = unit(0.0, "lines")) +
   theme(legend.position = "none",
-        strip.text.y = element_text(face = "bold", size=15))
+        strip.text.y = element_text(face = "bold", size=20))
 fst_plot
 ```
 
 #### Combine the plots
 
-```{r fig.width=15, fig.height=10}
-top <- plot_grid(het_plot, pca_plot, labels = c('A', 'B'), label_size = 20)
-plot_grid(top, fst_plot, labels = c(NA, 'C'), label_size = 20, nrow = 2, rel_heights = c(1, 0.5))
+```{r fig.width=15, fig.height=11.8}
+plot_grid(het_plot, pca_plot, fst_plot, labels = c('A', 'B', 'C'), label_size = 20, nrow = 3, rel_heights = c(4, 3.8, 4))
 ```
 
