--- a/markdown/original_pipeline.Rmd
+++ b/markdown/original_pipeline.Rmd
@@ -327,9 +327,10 @@ for LINE in `cat /workdir/batch-effect/sample_lists/saf_list_rerun_heterozygosit
   > $LINE'.ml' &
 done
 ```
+
 ## Come up with sample lists and tables for the batch effect project
 
-```{r eval=T}
+```{r eval=FALSE}
 base_dir = "/workdir/batch-effect/"
 # Read in the full sample table from the Greenland cod project
 sample_table_full <- read_tsv("../../cod/greenland-cod/sample_lists/sample_table_merged_mincov_contamination_filtered.tsv") %>%
@@ -402,10 +403,12 @@ write_lines(fastq_list_se, "../sample_lists/fastq_list_se.txt")
 
 ```{r eval=TRUE}
 ## Sample distribution
+sample_table_merged <-read_tsv("../sample_lists/sample_table_merged.tsv") %>%
+  rename(sample_id=sample_id_corrected)
 sample_size_plot <- sample_table_merged %>%
   mutate(data_type=ifelse(data_type=="pe", "NextSeq-150PE", "HiSeq-125SE")) %>%
-  mutate(sample_id_corrected=fct_reorder(sample_id_corrected, data_type)) %>%
-  ggplot(aes(x=population_new, fill=data_type, group=sample_id_corrected)) +
+  mutate(sample_id=fct_reorder(sample_id, data_type)) %>%
+  ggplot(aes(x=population_new, fill=data_type, group=sample_id)) +
   geom_bar(color="black") +
   scale_fill_viridis_d(begin=0.3, end=0.8) +
   xlab("population")+
@@ -416,13 +419,13 @@ sample_size_plot <- sample_table_merged %>%
 sample_size_plot
 ## Number of bases
 base_count <- read_tsv("../sample_lists/count_merged_old.tsv") %>%
-  dplyr::select(sample_id_corrected, final_mapped_bases)
+  transmute(sample_id=sample_id_corrected, final_mapped_bases=final_mapped_bases)
 coverage_plot <- sample_table_merged %>%
   mutate(data_type=ifelse(data_type=="pe", "NextSeq-150PE", "HiSeq-125SE")) %>%
   left_join(base_count) %>%
   arrange(data_type, desc(final_mapped_bases)) %>%
-  mutate(sample_id_corrected=as_factor(sample_id_corrected)) %>%
-  ggplot(aes(x=population_new, y=final_mapped_bases/0.67/10^9, fill=data_type, group=sample_id_corrected)) +
+  mutate(sample_id=as_factor(sample_id)) %>%
+  ggplot(aes(x=population_new, y=final_mapped_bases/0.67/10^9, fill=data_type, group=sample_id)) +
   geom_col(color="black") +
   scale_fill_viridis_d(begin=0.3, end=0.8) +
   labs(x="population", y="coverage", fill="batch")+
@@ -453,21 +456,24 @@ write_tsv(extraction_info, "../sample_lists/extraction_info.tsv")
 ```
 
 ```{r eval=TRUE, fig.width=12, fig.height=4}
+rename_pop <- tibble(population = c("ITV2011", "KNG2011", "QQL2011", "BUK2011", "IKE2011", "PAA2011", "ATP2011", "NAR2008", "UUM2010"),
+                     population_new =c("pop 1", "pop 2", "pop 3", "pop 4", "pop 5", "pop 6", "pop 7", "pop 8", "pop 9"))
 extraction_info <- read_tsv("../sample_lists/extraction_info.tsv") %>%
   filter(extraction_method != "Chan Tn5 bead") %>%
   dplyr::select(sample_id, degradation_level) %>%
   mutate(degradation_level = as.character(degradation_level),
          degradation_level = ifelse(degradation_level==0, "NA", degradation_level)) 
-sample_table_degradation <- left_join(sample_table_merged, extraction_info, by=c("sample_id_corrected"="sample_id"))
+sample_table_degradation <- left_join(sample_table_merged, extraction_info, by=c("sample_id"))
 degradation_sample_size <- sample_table_degradation %>%
   mutate(data_type=ifelse(data_type=="pe", "NextSeq-150PE", "HiSeq-125SE")) %>%
-  mutate(sample_id_corrected=fct_reorder(sample_id_corrected, degradation_level)) %>%
+  mutate(sample_id=fct_reorder(sample_id, degradation_level)) %>%
   mutate(degradation_level=ifelse(degradation_level=="1", "well-preserved", "degraded")) %>%
-  ggplot(aes(x=population_new, fill=degradation_level, group=sample_id_corrected)) +
+  dplyr::select(-population_new) %>%
+  left_join(rename_pop) %>%
+  ggplot(aes(x=population_new, fill=degradation_level, group=sample_id)) +
   geom_bar(color="black") +
   scale_fill_viridis_d(begin=0.5, end=1, direction = -1) +
-  xlab("population")+
-  ylab("sample size") +
+  labs(x="population", y="sample size", fill="degradation\nlevel")+
   facet_wrap(~data_type) +
   theme_cowplot() +
   coord_flip()
@@ -477,8 +483,10 @@ degradation_coverage <- sample_table_degradation %>%
   left_join(base_count) %>%
   arrange(desc(final_mapped_bases)) %>%
   mutate(degradation_level=ifelse(degradation_level=="1", "well-preserved", "degraded")) %>%
-  mutate(sample_id_corrected=as_factor(sample_id_corrected)) %>%
-  ggplot(aes(x=population_new, y=final_mapped_bases/0.67/10^9, fill=degradation_level, group=sample_id_corrected)) +
+  mutate(sample_id=as_factor(sample_id)) %>%
+  dplyr::select(-population_new) %>%
+  left_join(rename_pop) %>%
+  ggplot(aes(x=population_new, y=final_mapped_bases/0.67/10^9, fill=degradation_level, group=sample_id)) +
   geom_col(color="black") +
   scale_fill_viridis_d(begin=0.5, end=1, direction = -1) +
   labs(x="population", y="coverage", fill="degradation\nlevel")+
