--- a/markdown/degradation.Rmd
+++ b/markdown/degradation.Rmd
@@ -192,7 +192,7 @@ delta_het %>%
   theme(axis.title.x = element_blank())
 ```
 
-```{r eval=TRUE, fig.width=6, fig.height=7}
+```{r eval=TRUE, fig.width=7, fig.height=6.5}
 set.seed(42)
 p_a <- delta_het %>%
   filter(filter=="stringent") %>%
@@ -219,7 +219,7 @@ This shows that DNA damage has an stronger effect on SE samples (which are more 
 
 #### Extract private alleles and examine proportion of base substitutions
 
-```{r eval=T, fig.width=6, fig.height=7}
+```{r eval=T, fig.width=7, fig.height=3.6}
 maf_se <- read_tsv("../angsd/popminind20/se_global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20_popminind20.mafs.gz") %>%
   transmute(lg = chromo, position = position, major=major, minor = minor, se_maf = knownEM, se_nind=nInd)
 maf_pe <- read_tsv("../angsd/popminind20/pe_global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20_popminind20.mafs.gz")%>%
@@ -515,34 +515,36 @@ This shows that after excluding transitions and using stringent depth and qualit
 
 #### All three populations affected by degradation
 
-```{r eval=TRUE, fig.width=6, fig.height=5.3}
-rename_pop <- tibble(population = c("ATP2011", "NAR2008", "UUM2010"),
-                     population_new =c("pop 4", "pop 5", "pop 6"))
+```{r eval=TRUE, fig.width=7, fig.height=3.9}
+rename_pop <- tibble(population = c("ITV2011", "KNG2011", "QQL2011", "BUK2011", "IKE2011", "PAA2011", "ATP2011", "NAR2008", "UUM2010"),
+                     population_new =c("pop 1", "pop 2", "pop 3", "pop 4", "pop 5", "pop 6", "pop 7", "pop 8", "pop 9"))
 set.seed(42)
 p_c <- het_final %>%
   left_join(rename_pop) %>%
-  filter(!is.na(population_new), filter=="stringent") %>%
-  mutate(batch=ifelse(data_type=="pe", "well-preserved", "degraded")) %>%
+  filter(population_new %in% str_c("pop ", 7:9), filter=="stringent") %>%
+  mutate(batch=ifelse(data_type=="pe", "Nextseq-150PE\n(well-preserved)", "HiSeq-125SE\n(degraded)")) %>%
   mutate(type=ifelse(tran=="Including transitions", "Before", "After")) %>%
   mutate(type=fct_relevel(type, c("Before", "After"))) %>%
-  ggplot(aes(x=population, y=het)) +
+  ggplot(aes(x="", y=het*10^3)) +
   geom_boxplot(outlier.alpha = 0, color="black", size=0.2, width=0.2) +
   geom_jitter(aes(color=batch), height = 0, width = 0.1, size=2) +
   scale_color_viridis_d(begin=0.25, end=0.75) +
   ylim(c(0,NA)) +
-  ylab("heterozygosity") +
-  facet_grid(population_new~type, scales = "free_y") +
+  facet_grid(type~population_new, scales = "free_y") +
   xlab(" ") +
+  ylab(expression(paste("heterozygosity (in ", 10^-3, ")"))) +
   coord_flip() +
   theme_cowplot() +
   theme(panel.background=element_rect(colour="black", size=0.8),
-        legend.position = c(0.75, 0.93),
+        legend.position = c(0.815, 0.12),
         legend.text = element_text(size=9),
         legend.key.size = unit(0.5, 'lines'),
-        strip.text.x = element_text(face = "bold", size=20),
+        strip.text.y = element_text(face = "bold", size=20),
+        strip.text.x = element_text(size=18),
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank(),
-        legend.key = element_rect(fill = "white", colour = "black"))
+        legend.key = element_rect(fill = "white", colour = "black"),
+        legend.title = element_blank())
 print(p_c)
 ```
 
@@ -565,37 +567,39 @@ pca_after <- pca_table[,1:4] %>%
 pca_combined <- bind_rows(bind_cols(pca_before, type="Before"), 
                           bind_cols(pca_after, type="After")) %>%
   mutate(type=fct_relevel(type, c("Before", "After"))) %>%
-  mutate(batch=ifelse(data_type=="se", "degraded", "well-preserved"))
+  mutate(batch=ifelse(data_type=="pe", "Nextseq-150PE\n(well-preserved)", "HiSeq-125SE\n(degraded)"))
 pca_combined_select_pops <- filter(pca_combined, population %in% c("ATP2011", "NAR2008", "UUM2010"))
 ```
 
-```{r eval=TRUE,fig.width=6, fig.height=5.3}
+```{r eval=TRUE,fig.width=7, fig.height=3.6}
 p_d <- pca_combined_select_pops %>%
   left_join(rename_pop) %>%
   ggplot(aes(x=PC1, y=PC2)) +
   geom_point(data=pca_combined, color="grey", size=0.5) +
   geom_point(aes(color=batch), size=2) +
   scale_color_viridis_d(begin=0.25, end=0.75) +
-  facet_grid(population_new~type) +
+  facet_grid(type~population_new) +
   ylim(-0.1, NA) +
   xlim(-0.15, NA) +
   theme_cowplot() +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank(),
         panel.border = element_rect(colour="black",size=0.5),
-        legend.position = c(0.75, 0.93),
+        legend.position = c(0.815, 0.12),
         legend.text = element_text(size=9),
         legend.key.size = unit(0.5, 'lines'),
-        strip.text.x = element_text(face = "bold", size=20),
-        legend.key = element_rect(fill = "white", colour = "black"))
+        strip.text.x = element_text(size=18),
+        strip.text.y = element_text(face = "bold", size=20),
+        legend.key = element_rect(fill = "white", colour = "black"),
+        legend.title = element_blank())
 p_d
 ```
 
 ## Assemble Figure 5
 
-```{r eval=TRUE, fig.width=12, fig.height=13}
-bottom <- cowplot::plot_grid(p_b, p_a,nrow = 1, labels = c("C", "D"), scale = 0.9)
-top <- cowplot::plot_grid(p_c, p_d, nrow = 1, labels = c("A", "B"), scale = 0.9)
-figure <- cowplot::plot_grid(top, bottom, nrow = 2, rel_heights = c(5.3, 7))
+```{r eval=TRUE, fig.width=7, fig.height=17.6}
+#bottom <- cowplot::plot_grid(p_b, p_a,nrow = 1, labels = c("C", "D"), scale = 0.9)
+#top <- cowplot::plot_grid(p_c, p_d, nrow = 1, labels = c("A", "B"), scale = 0.9)
+figure <- cowplot::plot_grid(p_c, p_d, p_b, p_a, nrow = 4, labels = c("A", "B", "C", "D"), rel_heights = c(3.9, 3.6, 3.6, 6.5))
 print(figure)
 ```
