tried GATK BQSR one more time

--- a/markdown/bqsr.Rmd
+++ b/markdown/bqsr.Rmd
@@ -20,9 +20,9 @@ library(cowplot)
 ```{bash eval=FALSE}
 nohup /workdir/programs/angsd0.931/angsd/angsd \
 -b /workdir/cod/greenland-cod/sample_lists/bam_list_realigned_mincov_filtered.txt \
--anc /workdir/cod/reference_seqs/gadMor3.fasta \
+-ref /workdir/cod/reference_seqs/gadMor3.fasta \
 -out /workdir/batch-effect/angsd/global_snp_list_bqsr \
--GL 1 -doMaf 1 -doMajorMinor 1 -P 8 -SNP_pval 1e-6 -minQ 20 -minMapQ 20 \
+-GL 1 -doMaf 1 -doMajorMinor 4 -P 8 -SNP_pval 1e-6 -minQ 20 -minMapQ 20 \
 > /workdir/batch-effect/nohups/global_snp_list_bqsr.nohup &
 ```
 
@@ -346,7 +346,7 @@ Save the following script as `/workdir/batch-effect/scripts/get_heterozygosity_b
 BAMLIST=/workdir/batch-effect/sample_lists/bam_list_realigned.txt
 OUTDIR=/workdir/batch-effect/angsd/heterozygosity/
 JOB_INDEX=0
-JOBS=10
+JOBS=30
 MINDP=2
 MAXDP=10
 MINQ=0
