updated comparison of ANGSD vs. PCAngsd

--- a/markdown/depth.Rmd
+++ b/markdown/depth.Rmd
@@ -189,47 +189,63 @@ cowplot::plot_grid(p1, p2, p3, ncol = 1, rel_heights = c(1.2, 1, 1), labels=c("A
 
 ```{bash eval=FALSE}
 nohup python2 /workdir/programs/pcangsd/pcangsd.py \
--beagle /workdir/batch-effect/angsd/bam_list_realigned_private_snps.beagle.gz \
+-beagle /workdir/batch-effect/angsd/bam_list_realigned_depth_ratio_filtered_snps.beagle.gz \
 -minMaf 0.05 \
 -threads 8 \
--o /workdir/batch-effect/angsd/bam_list_realigned_private_snps_pcangsd \
-> /workdir/batch-effect/nohups/run_pcangsd_private_snps.nohup &
+-o /workdir/batch-effect/angsd/bam_list_realigned_depth_ratio_filtered_snps_pcangsd \
+> /workdir/batch-effect/nohups/run_pcangsd_depth_ratio_filtered_snps.nohup &
 ```
 
 #### Supplementary Figure: PCA with PCAngsd
 
 ```{r eval=TRUE, include=FALSE}
 sample_table <- read_tsv("../sample_lists/sample_table_merged.tsv")
-rename_pop <- tibble(population = c("ITV2011", "KNG2011", "QQL2011", "all pops"),
-                     population_new =c("pop 1", "pop 2", "pop 3", "all pops"))
-genome_cov <- npyLoad("../angsd/bam_list_realigned_private_snps_pcangsd.cov.npy")
+rename_pop <- tibble(population = c("ITV2011", "KNG2011", "QQL2011", "BUK2011", "IKE2011", "PAA2011", "ATP2011", "NAR2008", "UUM2010"),
+                     population_new =c("pop 1", "pop 2", "pop 3", "pop 4", "pop 5", "pop 6", "pop 7", "pop 8", "pop 9"))
+
+genome_cov <- read_tsv("../angsd/bam_list_realigned_depth_ratio_filtered_snps.covMat", col_names = F) %>%
+  as.matrix() %>%
+  .[, -164]
+PCA(genome_cov, sample_table$sample_id_corrected, sample_table$data_type, 1, 2, show.ellipse = F, show.line = F)
+pca_angsd <- pca_table[,1:4] %>%
+  rename(data_type=population) %>%
+  left_join(transmute(sample_table, individual=sample_id_corrected, population=population))
+
+genome_cov <- npyLoad("../angsd/bam_list_realigned_depth_ratio_filtered_snps_pcangsd.cov.npy")
 PCA(genome_cov, sample_table$sample_id_corrected, sample_table$data_type, 1, 2, show.ellipse = F, show.line = F)
 pca_pcangsd <- pca_table[,1:4] %>%
   rename(data_type=population) %>%
   left_join(transmute(sample_table, individual=sample_id_corrected, population=population)) %>%
-  mutate(batch=ifelse(data_type=="se", "HiSeq-125SE", "NextSeq-150PE")) %>%
   mutate(PC2=-PC2)
 ```
 
-```{r eval=TRUE, fig.width=4.5, fig.height=6.6}
-pca_angsd_select_pops <- filter(pca_pcangsd, population %in% c("KNG2011", "QQL2011", "ITV2011"))
-pca_plot <- pca_angsd_select_pops %>%
+```{r eval=TRUE, fig.width=4.5, fig.height=12}
+pca_combined <- bind_rows(bind_cols(pca_angsd, type="PCA with ANGSD"), 
+                          bind_cols(pca_pcangsd, type="PCA with PCAngsd")) %>%
+  mutate(type=fct_relevel(type, c("PCA with ANGSD", "PCA with PCAngsd"))) %>%
+  mutate(batch=ifelse(data_type=="se", "HiSeq-125SE", "NextSeq-150PE")) %>%
+  filter(! (individual %in% c("UUM2010_036", "UUM2010_038") & type == "PCA with ANGSD")) %>%
+  filter(! (individual %in% c("UUM2010_026", "UUM2010_030") & type == "PCA with PCAngsd"))
+pca_plot <- bind_rows(pca_combined, mutate(pca_combined, population="all pops")) %>%
   left_join(rename_pop) %>%
+  mutate(population_new=ifelse(is.na(population_new), "all pops", population_new)) %>% 
+  mutate(population_new=fct_relevel(population_new, c(str_c("pop ", 1:9), "all pops"))) %>%
   ggplot(aes(x=PC1, y=PC2)) +
-  geom_point(data=pca_pcangsd, color="grey", size=0.5) +
-  geom_point(aes(color=batch), size=2) +
+  geom_point(data=pca_combined, color="grey", size=0.3) +
+  geom_point(aes(color=batch), size=1.5) +
   scale_color_viridis_d(begin=0.25, end=0.75) +
-  facet_grid(population_new~.) +
-  ylim(NA, 0.15) +
-  xlim(-0.15, NA) +
+  facet_grid(population_new~type) +
   theme_cowplot() +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank(),
-        panel.border = element_rect(colour="black",size=0.5),
-        legend.position = c(0.55, 0.94),
+        panel.border = element_rect(colour="black",size=0.8),
+        legend.position = c(0.72, 0.99),
         legend.key.size = unit(0.5, 'lines'),
-        strip.text.x = element_text(face = "bold", size=20),
-        legend.key = element_rect(fill = "white", colour = "black"))
+        legend.text = element_text(size=8),
+        strip.text.y = element_text(size=10),
+        strip.text.x = element_text(size=10),
+        legend.key = element_rect(fill = "white", colour = "black"),
+        legend.title = element_blank())
 pca_plot
 ```
 
