some color changes

--- a/markdown/depth.Rmd
+++ b/markdown/depth.Rmd
@@ -65,7 +65,7 @@ p1 <- pca_table_final %>%
   ggplot(aes(x=PC1, y=PC2, color=as.character(coverage))) +
   geom_point() +
   facet_grid(method~sample_size, scales="free") +
-  scale_color_viridis_d(name = "coverage", option = "D", begin = 0.75, end = 0.25) +
+  scale_color_viridis_d(name = "coverage", option = "cividis", begin = 0.95, end = 0.4) +
   theme_cowplot() +
   theme(panel.border = element_rect(size = 1, color = "black"),
         text = element_text(size=11), 
@@ -117,7 +117,7 @@ p2 <- pca_table_final %>%
   mutate(method="ANGSD (-doCov 1)") %>%
   ggplot(aes(x=PC1, y=PC2, color=as.character(coverage))) +
   geom_point() +
-  scale_color_viridis_d(name = "coverage", option = "D", begin = 0.75, end = 0.25) +
+  scale_color_viridis_d(name = "coverage", option = "cividis", begin = 0.95, end = 0.4) +
   facet_grid(method~sample_size, scales="free") +
   theme_cowplot() +
   theme(panel.border = element_rect(size = 1, color = "black"),
@@ -169,7 +169,7 @@ p3 <- mds_table_final %>%
   ggplot(aes(x=PCo1, y=PCo2, color=as.character(coverage))) +
   geom_point() +
   facet_grid(method~sample_size, scales="free") +
-  scale_color_viridis_d(name = "coverage", option = "D", begin = 0.75, end = 0.25) +
+  scale_color_viridis_d(name = "coverage", option = "cividis", begin = 0.95, end = 0.4) +
   theme_cowplot() +
   theme(panel.border = element_rect(size = 1, color = "black"),
         text = element_text(size=11), 
